kubernetes.in.yml
# Kompassi deployment using Kubernetes
# usage: emrichen kubernetes.in.yml | kubectl apply -n kompassi -f -

!Defaults
kompassi_public_hostname: kompassi.127.0.0.1.xip.io
kompassi_tag: staging
kompassi_image: !Format tracon/kompassi:{kompassi_tag}
kompassi_static_image: !Format tracon/kompassi-static:{kompassi_tag}

# Common environment vars for both kompassi and celery pods.
kompassi_environment:
  - name: KOMPASSI_POSTGRESQL_HOSTNAME
    value: postgres
  - name: KOMPASSI_POSTGRESQL_DATABASE
    value: kompassi
  - name: KOMPASSI_POSTGRESQL_USERNAME
    valueFrom:
      secretKeyRef:
        name: postgres
        key: username
  - name: KOMPASSI_POSTGRESQL_PASSWORD
    valueFrom:
      secretKeyRef:
        name: postgres
        key: password
  - name: KOMPASSI_RABBITMQ_HOSTNAME
    value: rabbitmq
  - name: KOMPASSI_RABBITMQ_VHOST
    value: kompassi
  - name: KOMPASSI_RABBITMQ_USERNAME
    valueFrom:
      secretKeyRef:
        name: rabbitmq
        key: username
  - name: KOMPASSI_RABBITMQ_PASSWORD
    valueFrom:
      secretKeyRef:
        name: rabbitmq
        key: password
  - name: SECRET_KEY
    valueFrom:
      secretKeyRef:
        name: kompassi
        key: secretKey
  - name: ALLOWED_HOSTS
    value: "*"


#############
# MEMCACHED #
#############
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  labels:
    stack: kompassi
    component: memcached
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    stack: kompassi
    component: memcached

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
spec:
  selector:
    matchLabels:
      stack: kompassi
      component: memcached
  replicas: 1
  template:
    metadata:
      labels:
        stack: kompassi
        component: memcached
    spec:
      containers:
      - name: master
        image: memcached
        resources: {}
        ports:
        - containerPort: 6379


############
# RABBITMQ #
############
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    stack: kompassi
    component: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
  selector:
    stack: kompassi
    component: rabbitmq

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      stack: kompassi
      component: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        stack: kompassi
        component: rabbitmq
    spec:
      containers:
      - name: master
        image: rabbitmq
        resources: {}
        ports:
        - containerPort: 5672
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: rabbitmq-data
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-data

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    stack: kompassi
    component: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    stack: kompassi
    component: postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      stack: kompassi
      component: postgres
  replicas: 1
  template:
    metadata:
      labels:
        stack: kompassi
        component: postgres
    spec:
      containers:
      - name: master
        image: postgres
        resources: {}
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - kompassi
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - kompassi
          initialDelaySeconds: 30
          periodSeconds: 30
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data

---
apiVersion: v1
kind: Service
metadata:
  name: kompassi
  labels:
    stack: kompassi
    component: kompassi
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    stack: kompassi
    component: kompassi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kompassi
spec:
  selector:
    matchLabels:
      stack: kompassi
      component: kompassi
  replicas: 1
  template:
    metadata:
      labels:
        stack: kompassi
        component: kompassi
    spec:
      containers:
      - name: master
        image: !Var kompassi_image
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 8000
        env: !Var kompassi_environment
      volumes:
      - name: kompassi-media
        persistentVolumeClaim:
          claimName: kompassi-media

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
spec:
  selector:
    matchLabels:
      stack: kompassi
      component: celery
  replicas: 1
  template:
    metadata:
      labels:
        stack: kompassi
        component: celery
    spec:
      containers:
      - name: master
        image: !Var kompassi_image
        args: ["celery", "-A", "kompassi.celery_app:app", "worker"]
        imagePullPolicy: Always
        resources: {}
        env: !Var kompassi_environment


###############################
# NGINX (Static file serving) #
###############################
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    stack: kompassi
    component: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    stack: kompassi
    component: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      stack: kompassi
      component: nginx
  replicas: 1
  template:
    metadata:
      labels:
        stack: kompassi
        component: nginx
    spec:
      containers:
      - name: master
        image: !Var kompassi_static_image
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 80


###########
# INGRESS #
###########
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kompassi
spec:
  rules:
    - host: !Var kompassi_public_hostname
      http:
        paths:
        - path: /static
          backend:
            serviceName: nginx
            servicePort: 80
        - path: /
          backend:
            serviceName: kompassi
            servicePort: 8000
